--- a/mkat1/WebContent/css/custom.css
+++ b/mkat1/WebContent/css/custom.css
@@ -67,6 +67,12 @@ a {
 	margin-top: 150px;
 }
 
+.imagebox img {
+	margin-left: auto;
+	margin-right: auto;
+	padding-bottom: 3em;
+}
+
 /* header image */
 
 .scroll-box {
