add faq, downloads and a few other things

--- a/mkat1/WebContent/css/custom.css
+++ b/mkat1/WebContent/css/custom.css
@@ -73,6 +73,17 @@ a {
 	padding-bottom: 3em;
 }
 
+.topic {
+	padding-top: 150px;
+}
+
+.faq-entry {
+	padding-top: 150px;
+}
+.faq-details {
+	padding-bottom: 5em;
+}
+
 /* header image */
 
 .scroll-box {
